--- a/GTmetrix Extension/manifest.json
+++ b/GTmetrix Extension/manifest.json
@@ -1,7 +1,7 @@
 {
-"name": "My Bookmarks 1",
+"name": "Google Extension for Bookmarks",
 "version": "1.1",
-"description": "A browser action with a popup dump of all bookmarks, including search, add, edit and delete.",
+"description": "If a browser action to detect love between two birds, Jwaladeep and Pratiyush",
 "permissions": [
 "bookmarks"
 ],
